syntax = "proto3";
import "server/types.proto";

option go_package = "github.com/gjermundgaraba/pessimistic-validation/attestationsidecar/server";

package server;

// TODO: Document
service Claim {
  rpc GetClaim(ClaimRequest) returns (ClaimResponse) {}
}

message ClaimRequest {
  string chain_id = 1;
}

message ClaimResponse {
  SignedPacketCommitmentsClaim claim = 1;
}


